[package]
name = "derive"
version = "0.1.0"
edition = "2021"

[lib]
doctest = false
proc-macro = true

[features]
config = ["serde", "basic-toml"]
humansize = []
markdown = []
urlencode = []
serde-json = []
serde-yaml = []
num-traits = []
with-actix-web = []
with-axum = []
with-gotham = []
with-hyper = []
with-mendes = []
with-rocket = []
with-tide = []
with-warp = []

[dependencies]
parser = { package = "askama_parser", version = "0.2.0" }
mime = "0.3"
mime_guess = "2"
proc-macro2 = "1"
quote = "1"
serde = { version = "1.0", optional = true, features = ["derive"] }
syn = "2"
basic-toml = { version = "0.1.1", optional = true }
regex = "1.10.2"
